--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "proworkflow-dashboard",
   "version": "1.0.0",
   "description": "Live dashboard for ProWorkflow data using REST and GraphQL APIs",
-  "main": "dashboard-app.js",
+"main": "app.js",
   "scripts": {
-    "start": "node dashboard-app.js",
+"start": "node app.js",
     "start:dashboard": "node dashboard-app.js",
     "start:queue": "node assignment-queue-app.js",
     "start:both": "concurrently \"npm run start:dashboard\" \"npm run start:queue\"",
@@ -27,10 +27,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
