--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "proworkflow-dashboard",
   "version": "1.0.0",
-  "description": "Live dashboard for ProWorkflow data using REST and GraphQL APIs",
-"main": "app.js",
+  "description": "Secure live dashboard for ProWorkflow data using REST and GraphQL APIs",
+  "main": "app.js",
   "scripts": {
-"start": "node app.js",
-    "start:dashboard": "node dashboard-app.js",
+    "start": "node app.js",
+    "start:dashboard": "node app.js",
     "start:queue": "node assignment-queue-app.js",
     "start:both": "concurrently \"npm run start:dashboard\" \"npm run start:queue\"",
-    "dev": "concurrently \"nodemon dashboard-app.js\" \"nodemon assignment-queue-app.js\"",
-    "dev:dashboard": "nodemon dashboard-app.js",
+    "dev": "concurrently \"nodemon app.js\" \"nodemon assignment-queue-app.js\"",
+    "dev:dashboard": "nodemon app.js",
     "dev:queue": "nodemon assignment-queue-app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku main",
+    "security-audit": "npm audit",
+    "update-deps": "npm update"
   },
   "keywords": [
     "proworkflow",
@@ -21,20 +23,20 @@
     "graphql",
     "rest",
     "heroku",
-    "assignment-queue"
+    "assignment-queue",
+    "security",
+    "helmet",
+    "csp"
   ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
-    "bcrypt": "^6.0.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^8.1.0",
-    "express-session": "^1.18.2",
-    "helmet": "^8.1.0"
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -45,6 +47,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "your-repo-url"
+    "url": "https://github.com/broadleafmedia/proworkflow-dashboard"
   }
 }
