--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "proworkflow-dashboard",
   "version": "1.0.0",
-  "description": "Secure live dashboard for ProWorkflow data using REST and GraphQL APIs",
+  "description": "Secure live dashboard for ProWorkflow data with status updates",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "start:dashboard": "node app.js",
-    "start:queue": "node assignment-queue-app.js",
-    "start:both": "concurrently \"npm run start:dashboard\" \"npm run start:queue\"",
-    "dev": "concurrently \"nodemon app.js\" \"nodemon assignment-queue-app.js\"",
-    "dev:dashboard": "nodemon app.js",
-    "dev:queue": "nodemon assignment-queue-app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "git push heroku main",
     "security-audit": "npm audit",
@@ -20,22 +15,24 @@
     "proworkflow",
     "dashboard",
     "api",
-    "graphql",
     "rest",
     "heroku",
     "assignment-queue",
     "security",
     "helmet",
-    "csp"
+    "csp",
+    "status-updates"
   ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
-    "concurrently": "^8.2.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
     "helmet": "^7.1.0"
   },
   "devDependencies": {
