--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
+    "helmet": "^7.2.0",
     "openai": "^5.21.0"
   },
   "devDependencies": {
